applied changed from openrewrite